--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -37,6 +37,7 @@ body {
 
 #navbar1 {
   background: #113f9c;
+  background-image: linear-gradient(45deg, #3D41DA 0%, #0088F7 100%);
   width: 65.5vw;
   position: absolute;
   top: 6.5vh;
@@ -74,6 +75,7 @@ a.underline22 {
   color: #ffff;
   text-decoration: none;
   overflow: hidden;
+  font-weight: 500;
 }
 a.underline22:hover {
   color: #87aad0;
@@ -141,7 +143,7 @@ a.underline:hover {
 
 #navbar2 {
   opacity: 0;
-  background: #113f9c;
+  background: #ffffffe3;
   height: 60px;
   position: fixed;
   top: 0;
@@ -175,12 +177,13 @@ a.underline2 {
   display: inline;
   position: relative;
   font-size: 15px;
-  color: #ffff;
+  color: #080808;
   text-decoration: none;
   overflow: hidden;
+  font-weight: 600;
 }
 a.underline2:hover {
-  color: #87aad0;
+  color: #113f9c;
 }
 
 .underline2:after {
@@ -190,7 +193,7 @@ a.underline2:hover {
   right: 0;
   width: 0;
   top: 86px;
-  background: #ffff;
+  background: #113f9c;
   height: 3px;
   transition-property: width;
   transition-duration: 0.5s;
@@ -206,7 +209,7 @@ a.underline2:hover {
 }
 
 .selected2 {
-  color: #87aad0 !important;
+  color: #113f9c !important;
 }
 .selected2:after {
   content: "";
@@ -254,7 +257,7 @@ a.underline2:hover {
 .white {
   background: #ffff;
   color: #5d5d5d;
-  padding: 5.9vw 6.5vw;
+  padding: 5.9vw 6.5vw 3.9vw 6.5vw;
 }
 
 .blue {
@@ -365,11 +368,11 @@ a.underline3:after {
   margin-bottom: 5vw;
 }
 .about-sec p {
-  font-size: 1.464128vw;
+  font-size: 1.3vw;
   margin-bottom: 2vw;
 }
 .about-sec h1 {
-  font-size: 3.8799392vw;
+  font-size: 3vw;
   font-weight: 800;
   color: #5d5d5d;
   margin-bottom: 2vw;
@@ -380,24 +383,50 @@ a.underline3:after {
   height: 116px;
 }
 
+.bottomRightRounded {
+  position: absolute;
+  z-index: 9;
+  transform: rotate(180deg);
+  margin-top: -1px;
+}
+
+.bottomRightRounded path {
+  fill: #fff;
+  stroke: #fff;
+}
+
+.topLeftRounded {
+  position: absolute;
+  margin-top: -100px;
+  z-index: 9;
+  left: 0;
+}
+
+.topLeftRounded path {
+  fill: #fff;
+  stroke: #fff;
+}
+
 .who-we-are {
   background-image: url(images/preform.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 31%;
-  padding: 5.9vw 6.5vw;
+  padding: 12vw 6.5vw;
   color: #c78282;
-  box-shadow: 0px 1px 20px 2px #00000061;
+  text-align: center;
+  background-image: linear-gradient(-135deg, #3D41DA 0%, #1E1F44 100%);
 }
 .who-we-are p {
-  font-size: 1.83016vw;
+  font-size: 1.3177152vw;
   margin-bottom: 2vw;
-  color: #0aacff;
+  color: #fff;
+  padding: 25px 24vw;
 }
 .who-we-are h1 {
-  font-size: 3.8799392vw;
+  font-size: 3.5139072vw;
   font-weight: 800;
-  color: #0aacff;
+  color: #fff;
 }
 
 .col-3_5 {
@@ -407,15 +436,16 @@ a.underline3:after {
 }
 
 .dark-product {
+  /* border: 1px dashed white; */
   font-size: 1.3vw;
   font-weight: 500;
-  border-radius: 11px;
+  border-radius: 5px;
   padding: 1.8vw;
   transition: all 0.7s;
   text-align: center;
   height: 193px;
-  color: #c8c8c8;
-  border: 1px dashed white;
+  color: #d4d4d4;
+  background: #ffffff3d;
 }
 
 .what-we-do p {
@@ -423,7 +453,7 @@ a.underline3:after {
   margin-bottom: 2vw;
 }
 .what-we-do h1 {
-  font-size: 3.8799392vw;
+  font-size: 3vw;
   font-weight: 800;
   color: #5d5d5d;
   margin-bottom: 5vw;
@@ -446,8 +476,11 @@ img.partner-logo {
 }
 
 .owl1-item {
-  height: 25vw;
+  height: 29vw;
+  width: 19.8389344vw;
   transition: all 0.3s ease-in-out;
+  box-shadow: -1px 18px 20px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5px;
 }
 
 #hero-product {
@@ -736,10 +769,6 @@ footer {
 }
 
 @media (max-width: 768px) {
-  #navbar1 {
-    background: #ffffff;
-  }
-
   img.logo {
     height: 57px;
     width: 100px;
@@ -902,7 +931,7 @@ path#bottom {
   }
 
   .about-sec h1 {
-    font-size: 6.879939vw;
+    font-size: 5.879939vw;
     margin-bottom: 5vw;
   }
 
@@ -911,18 +940,23 @@ path#bottom {
     margin-bottom: 1vw;
   }
 
-  .client-sec {
+  .who-we-are {
     margin-bottom: -10vw;
   }
 
-  .client-sec h1 {
+  .who-we-are h1 {
     font-size: 5.879939vw;
     margin-bottom: 4vw;
   }
 
-  .product-sec h1 {
+  .what-we-do h1 {
     font-size: 5.879939vw;
     margin-bottom: 7vw;
+  }
+
+  .logos-com {
+    width: auto;
+    height: 40px;
   }
 
   .product-content h3 {
