--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -289,7 +289,8 @@ img.logo2 {
 
 .top-menu2 {
   ul {
-    padding-right: 4vw;
+    padding-right: 0;
+    // padding-right: 4vw;
     padding-top: 5px;
     margin-bottom: 0;
   }
