--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -220,35 +220,6 @@ a.underline2:hover {
   transition-timing-function: ease-out;
 }
 
-.black {
-  background: #2a2c2d;
-  color: white;
-  padding: 6.2vh 6.7vw 5.2vh;
-  height: 21vh;
-  cursor: default;
-}
-.black h5 {
-  font-size: 1.3177152vw;
-  margin-bottom: 0.7vh;
-}
-.black i {
-  font-size: 4.1727648vw;
-  color: #113f9c;
-  padding-right: 0.8vw;
-  margin-top: -4px;
-  transition: all 0.3s linear;
-}
-.black i:hover {
-  color: #d8d8d8;
-}
-
-.black-p {
-  color: #9e9e9e;
-  font-size: 0.9882864vw;
-  font-weight: 500;
-  padding-right: 3vw;
-}
-
 .white {
   background: #ffff;
   color: #5d5d5d;
@@ -560,6 +531,39 @@ p.font-1-4vw {
 footer {
   background: #191f23;
   color: #B0B0B0;
+}
+
+.black {
+  background: #2a2c2d;
+  color: white;
+  padding: 6.2vh 6.7vw 5.2vh;
+  height: 21vh;
+  cursor: default;
+}
+.black h5 {
+  font-size: 1.3177152vw;
+  margin-bottom: 0.7vh;
+}
+.black i {
+  font-size: 4.1727648vw;
+  color: #113f9c;
+  padding-right: 0.8vw;
+  margin-top: -4px;
+  transition: all 0.3s linear;
+}
+.black i:hover {
+  color: #d8d8d8;
+}
+
+.direction {
+  cursor: pointer !important;
+}
+
+.black-p {
+  color: #9e9e9e;
+  font-size: 0.9882864vw;
+  font-weight: 500;
+  padding-right: 3vw;
 }
 
 .foot-row {
