--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -265,40 +265,6 @@ a.underline2 {
   }
 }
 
-.black {
-  // background: #232323;
-  background: #2a2c2d;
-  color: white;
-  padding: 6.2vh 6.7vw 5.2vh;
-  height: 21vh;
-  cursor: default;
-
-  h5 {
-    font-size: 18*$vw;
-    margin-bottom: 0.7vh;
-  }
-
-  i {
-    font-size: 57*$vw;
-    color: $primary;
-    padding-right: 0.8vw;
-    margin-top: -4px;
-    transition: all 0.3s linear;
-
-    &:hover {
-      color: #d8d8d8;
-    }
-  }
-}
-
-.black-p {
-  color: #9e9e9e;
-  font-size: 13.5*$vw;
-  font-weight: 500;
-  padding-right: 3vw;
-  // padding-left: 2vw;
-}
-
 .white {
   background: #ffff;
   color: #5d5d5d;
@@ -636,6 +602,44 @@ p.font-1-4vw{
 footer {
   background: $footer;
   color: #B0B0B0;
+}
+
+.black {
+  // background: #232323;
+  background: #2a2c2d;
+  color: white;
+  padding: 6.2vh 6.7vw 5.2vh;
+  height: 21vh;
+  cursor: default;
+
+  h5 {
+    font-size: 18*$vw;
+    margin-bottom: 0.7vh;
+  }
+
+  i {
+    font-size: 57*$vw;
+    color: $primary;
+    padding-right: 0.8vw;
+    margin-top: -4px;
+    transition: all 0.3s linear;
+
+    &:hover {
+      color: #d8d8d8;
+    }
+  }
+}
+
+.direction {
+  cursor: pointer !important;
+}
+
+.black-p {
+  color: #9e9e9e;
+  font-size: 13.5*$vw;
+  font-weight: 500;
+  padding-right: 3vw;
+  // padding-left: 2vw;
 }
 
 .foot-row {
