--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -485,20 +485,20 @@ p.font-1-4vw {
   font-size: 1.3vw;
 }
 
-#hero-technology {
-  height: 100vh;
-}
-
 .tech-row {
-  padding: 5.9vw 6.5vw 4.5vw 6.5vw;
+  padding: 12.9vw 6.5vw 0 6.5vw;
 }
 .tech-row p {
   font-size: 1.3177152vw;
   padding-top: 48px;
 }
 
-#hero-aboutus {
-  height: 100vh;
+.tech-row2 {
+  padding: 0 6.5vw 4.5vw 6.5vw;
+}
+.tech-row2 p {
+  font-size: 1.3177152vw;
+  padding-top: 48px;
 }
 
 .about-para1 {
