--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -29,31 +29,25 @@ body {
 }
 
 #navbar1 {
-  background: #113f9c;
-  background-image: linear-gradient(45deg, #3D41DA 0%, #0088F7 100%);
-  width: 65.5vw;
-  position: absolute;
-  top: 6.5vh;
-  height: 82px;
-  padding-left: 2.7vw;
+  background: #ffffffe3;
+  height: 72px;
   z-index: 1;
-  /* left: 8.3vw; */
-  right: 8.3vw;
-  border-radius: 53px;
+  position: absolute;
+  width: 100%;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  padding: 0 12.5vw;
 }
 
 img.logo {
-  height: 70px;
-  width: 125px;
-  position: absolute;
-  top: 7px;
-  left: -198px;
+  height: 100%;
+  width: 90px;
 }
 
 .top-menu ul {
   padding-right: 4vw;
-  padding-top: 5px;
+  padding-top: 3px;
   margin-bottom: 0;
+  margin-left: 8vw;
 }
 .top-menu li {
   display: inline;
@@ -65,13 +59,13 @@ a.underline22 {
   padding: 34px 0;
   display: inline;
   position: relative;
-  color: #ffff;
+  color: black;
   text-decoration: none;
   overflow: hidden;
   font-weight: 500;
 }
 a.underline22:hover {
-  color: #87aad0;
+  color: #113f9c;
 }
 
 a.underline {
@@ -349,6 +343,11 @@ a.underline3:after {
   height: 116px;
 }
 
+.logo-polymer {
+  height: 107px;
+  margin-top: 7px;
+}
+
 .bottomRightRounded {
   position: absolute;
   z-index: 9;
@@ -448,12 +447,64 @@ img.partner-logo {
   left: 26%;
 }
 
+.testimonials h1 {
+  font-size: 3vw;
+  font-weight: 800;
+  color: #5d5d5d;
+  margin-bottom: 5vw;
+}
+
 .owl1-item {
   height: 29vw;
   width: 19.8389344vw;
   transition: all 0.3s ease-in-out;
   box-shadow: -1px 18px 20px 2px rgba(0, 0, 0, 0.1);
   margin-bottom: 5px;
+  position: relative;
+}
+
+.test-pic {
+  width: 7.687vw !important;
+  height: auto;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 3px solid #2354a30d !important;
+  margin-top: 4vw;
+  margin-bottom: 1.22vw;
+}
+
+.test-comment {
+  height: 7.9794976vw;
+  overflow: auto;
+}
+.test-comment p {
+  color: #5d5d5d;
+  font-size: 1.0248896vw;
+  font-weight: 500;
+}
+
+.test-name {
+  color: #fff;
+  font-size: 1.2vw;
+  margin-top: 1vw;
+  margin-bottom: 3px;
+}
+
+.test-title {
+  color: #20dcdb;
+  font-size: 1vw;
+  font-weight: 500;
+}
+
+.test-blue {
+  color: #2354a3;
+  font-size: 13px;
+  border: 1px solid #2354a3;
+  background: #2354a3;
+  height: 6vw;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 #hero-product {
@@ -892,6 +943,17 @@ path#bottom {
   .logos-com {
     width: auto;
     height: 40px;
+  }
+
+  .owl1-item {
+    height: 86vw;
+    width: 59vw;
+    margin-bottom: 5px;
+    box-shadow: 0px 2px 20px 2px rgba(0, 0, 0, 0.1);
+  }
+
+  .owl-dots {
+    display: none;
   }
 
   .product-content h3 {
