--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -34,7 +34,7 @@ body {
   z-index: 1;
   position: absolute;
   width: 100%;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: -2px -3px 10px 0 rgba(0, 0, 0, 0.5);
   padding: 0 12.5vw;
 }
 
@@ -59,13 +59,36 @@ a.underline22 {
   padding: 34px 0;
   display: inline;
   position: relative;
-  color: black;
+  color: #4e4e4e;
   text-decoration: none;
   overflow: hidden;
-  font-weight: 500;
+  font-weight: 600;
 }
 a.underline22:hover {
   color: #113f9c;
+}
+
+.underline22:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  width: 0;
+  top: 76px;
+  background: #113f9c;
+  height: 3px;
+  transition-property: width;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+}
+
+.underline22:active:after,
+.underline22:focus:after,
+.underline22:hover:after {
+  left: 0;
+  right: auto;
+  width: 100%;
+  cursor: none;
 }
 
 a.underline {
@@ -105,7 +128,7 @@ a.underline:hover {
 }
 
 .selected {
-  color: #87aad0 !important;
+  color: #113f9c !important;
 }
 .selected:after {
   content: "";
@@ -149,6 +172,11 @@ img.logo2 {
   left: 9.6vw;
 }
 
+.top-menu2 {
+  width: 100%;
+  text-align: center;
+  margin-top: -4.5px;
+}
 .top-menu2 ul {
   padding-right: 0;
   padding-top: 5px;
@@ -160,8 +188,17 @@ img.logo2 {
   transition: all 0.5s ease-out;
 }
 
+.my-li {
+  background: #393cc6;
+  color: #fff;
+  border-radius: 5px;
+  padding: 0.7vw 2vw 0.8vw 2vw !important;
+  margin-left: 2vw;
+  margin-right: -23vw;
+}
+
 a.underline2 {
-  padding: 52px 0;
+  padding: 24px 0 19px 0;
   display: inline;
   position: relative;
   font-size: 15px;
@@ -180,7 +217,7 @@ a.underline2:hover {
   z-index: 1;
   right: 0;
   width: 0;
-  top: 86px;
+  top: 61px;
   background: #113f9c;
   height: 3px;
   transition-property: width;
@@ -199,19 +236,6 @@ a.underline2:hover {
 
 .selected2 {
   color: #113f9c !important;
-}
-.selected2:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  right: 0;
-  width: 100% !important;
-  top: 86px;
-  background: #ffff;
-  height: 3px;
-  transition-property: width;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
 }
 
 .white {
